# QmlDraw

./: CMakeLists.txt  README.md  dte-draw.qrc
Draw/: AttributeWidget.qml  CMakeLists.txt  CanvasWidget.qml  ColorSquare.qml  DrawTools.qml  GlobalVar.qml  Main.qml  MainWindow.qml  PickerWidget.qml  main.cpp
debian/: changelog  control  copyright  rules
qml/: AttributeWidget.qml  CanvasWidget.qml  ColorSquare.qml  DrawTools.qml  GlobalVar.qml  MainWindow.qml  PickerWidget.qml  main.qml
src/: CMakeLists.txt  drawinterface.cpp  drawinterface.h  main.cpp  qtlabsplatform.cpp  qtlabsplatform.h
tests/: CMakeLists.txt  main.cpp
